--- a/Modulo_1/Codigos/Aula_4.html
+++ b/Modulo_1/Codigos/Aula_4.html
@@ -10,9 +10,18 @@
     <script>
         var x = 10;
         var y = 5;
+        //Soma
         var result = x + y;
-        console.log(x + y);
-        console.log(result);
+        var result1 = x * y;
+        var result2 = x / y;
+        var result3 = x - y;
+        var result4 = x % y;
+        console.log('Soma dentro do console.log', x + y);
+        console.log('Soma:', result);
+        console.log('Multiplicação:', result1);
+        console.log('Divisão:', result2);
+        console.log('Subtração:', result3)
+        console.log('Módulo:', result4)
     </script>
 </body>
 
